--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -49,14 +49,14 @@ body {
 
 .about-container {
     display: grid;
-    grid-template-columns: 20% 80%; /* Divide the container into two columns */
-    grid-gap: 0px; /* Add some gap between the columns */
+    grid-template-columns: 20% 80%;
+    grid-gap: 0px; 
     height: 200px;
     margin-top: 35px;
 }
 
 .about-me {
-    /* Add your styles for the "About Me" container */
+
     justify-self: end;
     border-right: 5px solid rgb(68, 88, 119);
     padding: 5px;
@@ -67,7 +67,7 @@ body {
 }
 
 .article {
-    /* Add your styles for the "Article" container */
+    
     width: 80%;
     margin-right: 100px;
     padding-left: 1px;
@@ -80,8 +80,8 @@ body {
 
 .work-container1 {
     display: grid;
-    grid-template-columns: 20% 80%; /* Divide the container into two columns */
-    grid-gap: 0px; /* Add some gap between the columns */
+    grid-template-columns: 20% 80%; 
+    grid-gap: 0px; 
     margin-top: 35px;
 }
 
@@ -93,19 +93,19 @@ body {
     padding-left: 0px;
     margin-left: 8px;
     margin-right: 100px;
-    position: relative; /* Add relative positioning to the container */
+    position: relative; 
 }
 
 .big-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(50%); /* Apply a dark tint by default */
+    filter: brightness(50%); 
     transition: filter 0.3s;
 }
   
 .big-image img:hover {
-    filter: brightness(100%); /* Remove the dark tint on hover */
+    filter: brightness(100%); 
     cursor: pointer;
 }
 
@@ -142,7 +142,7 @@ body {
 
 .small-images {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Update the grid-template-columns to create a 2x2 grid */
+    grid-template-columns: repeat(2, 1fr); 
     grid-gap: 8px;
     margin-top: 0px;
     padding-top: 8px;
@@ -152,20 +152,20 @@ body {
 }
 
 .small-images img {
-    width: 100%; /* Use relative width to fill the grid cell */
+    width: 100%; 
     height: 100%;
-    margin: 0; /* Remove the margin to avoid extra spacing */
+    margin: 0; 
     object-fit: cover;
     overflow: hidden;
     position: relative;
     border: 5px solid rgb(146, 204, 206);
     padding: 0px;
-    filter: brightness(50%); /* Apply a dark tint by default */
+    filter: brightness(50%); 
     transition: filter 0.3s;
 }
 
 .small-images img:hover {
-  filter: brightness(100%); /* Remove the dark tint on hover */
+  filter: brightness(100%); 
   cursor: pointer;
 }
 
@@ -240,7 +240,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 65px; /* Adjust the height as needed */
+    height: 65px;
     background-color: rgb(48, 53, 61);
 }
 
@@ -248,11 +248,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%; /* Adjust the width as needed */
+    width: 90%; 
 }
 
 .Name {
-    order: 1; /* Change the order of the element to push it to the left */
+    order: 1;
     margin-right: 20px;
     font-size: 45px;
     position: relative;
@@ -267,7 +267,7 @@ body {
 }
 
 .links-container {
-    order: 2; /* Change the order of the element to push it to the right */
+    order: 2; 
 }
 
 .links-container .links1 {
@@ -318,15 +318,15 @@ footer.footer {
 
 .contact-container {
     display: grid;
-    grid-template-columns: 20% 80%; /* Divide the container into columns with a minimum width of 120px */
-    grid-gap: 0px; /* Add some gap between the columns */
+    grid-template-columns: 20% 80%; 
+    grid-gap: 0px; 
     height: 100px;
     margin-top: 35px;
 }
 
 .contact-me {
-    /* Add your styles for the "About Me" container */
-    justify-self: end; /* Center the container horizontally */
+    
+    justify-self: end; 
     border-right: 5px solid rgb(68, 88, 119);
     padding: 5px;
     margin-right: 16px;
@@ -339,7 +339,7 @@ footer.footer {
 
 .article2 {
     display: flex;
-    /* justify-content: space-between; */
+    
     margin-right: 300px;
     gap: 65px;
     justify-content: center;
